<resources>
    <string name="app_name">SPJ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spj">SPJ</string>
    <string name="sport_professional">Sport Professional</string>
    <string name="football">Football</string>
    <string name="tennis">Tennis</string>
    <string name="basketball">Basketball</string>
    <string name="baseball">Baseball</string>
    <string name="settings">Settings</string>
    <string name="_basketball">-Basketball</string>
    <string name="_football">-Football</string>
    <string name="_tennis">-Tennis</string>
    <string name="_baseball">-Baseball</string>
    <string name="go_to_the_sections_of_interest_and_follow_the_sports_news_in_real_time">Go to the sections of interest and follow the sports news in real time</string>
    <string name="you_can_also_see_the_top_best_players_of_2023_tennis_basketball_baseball_and_football">You can also see the top best players of 2023: tennis, basketball, baseball and football</string>
    <string name="if_you_want_to_read_all_the_sports_news_of_the_week_then_click_on_the_rectangle_in_the_navigation_bar">If you want to read all the sports news of the week, then click on the rectangle in the navigation bar</string>
    <string name="also_to_make_it_convenient_for_you_to_read_the_news_at_any_time_of_the_day_we_have_made_a_theme_change_function">Also, to make it convenient for you to read the news at any time of the day, we have made a theme change function</string>
    <string name="title_news1_basketball">RUZHENTSEV CAUSED PRIDE WITH HIS PLAYOFF PERFORMANCE. I WOULD LIKE OTHER RUSSIANS TO FOLLOW HIS PATH AS WELL</string>
    <string name="title_new2_basketball">Supernovae or Outgoing Ones. 10 main stars of the basketball World Cup-2023</string>
    <string name="title_new3_basketball">Will the USA regain its former greatness? Will Spain defend the title? What you need to know about the 2023 World Cup</string>
    <string name="title_new1_football">Will Dynamo sell another leader to Europe? Have you already found someone to replace Fomin with</string>
    <string name="title_new2_football">Spartak beat Dynamo in the Russian Cup. Abascal\'s experiments finally worked!</string>
    <string name="title_new3_football">Nigmatullin believes that Khudyakov should think about renting to another club</string>
    <string name="title_new1_tennis">Minus Khachanov and Potapov. Which of the Russians did not live up to expectations at the start of the US Open</string>
    <string name="title_new2_tennis">Medvedev\'s record start. The Russian won the first match at the US Open in accelerated mode</string>
    <string name="title_new3_tennis">Comfortable in the shadow of Djokovic and Alcatraz</string>
    <string name="title_new1_baseball">The World Baseball Confederation does not plan to allow Russians to enter the international arena yet</string>
    <string name="title_new2_baseball">"The smart Americans turned it into baseball." Why will Russian schoolchildren be taught lapta?</string>
    <string name="title_new3_baseball">Brailey St. Clair - a reason to love softball</string>
    <string name="desc_new1_basketball">Carsen Edwards becomes the newest addition to new Pablo Laso\'s project at FC Bayern Munich with a one-year deal and completes the team\'s guard rotation, according to the official information.</string>
    <string name="desc_new2_basketball">Carsen Edwards becomes the newest addition to new Pablo Laso\'s project at FC Bayern Munich with a one-year deal and completes the team\'s guard rotation, according to the official information.</string>
    <string name="desc_new3_basketball">Carsen Edwards becomes the newest addition to new Pablo Laso\'s project at FC Bayern Munich with a one-year deal and completes the team\'s guard rotation, according to the official information.</string>
    <string name="desc_new1_football">In previous years, Dynamo gained a reputation as a club that does not skimp on buying players and generous contracts. It turned out to be much worse to sell their players profitably. A flashy example is the case of Maximilian Philip, bought for 20 million and sold three times cheaper.</string>
    <string name="desc_new2_football">Former Lokomotiv goalkeeper Ruslan Nigmatullin expressed the opinion that Daniil Khudyakov, the goalkeeper of the railwaymen, should think about renting to get permanent playing practice.\n"
                    "In total, 19‑year-old Khudyakov has 34 matches for Lokomotiv, in which he conceded 61 goals.</string>
    <string name="desc_new3_football">Carsen Edwards becomes the newest addition to new Pablo Laso\'s project at FC Bayern Munich with a one-year deal and completes the team\'s guard rotation, according to the official information.</string>
    <string name="desc_new1_tennis">Carsen Edwards becomes the newest addition to new Pablo Las\'s project at FC Bayern Munich with a one-year deal and completes the team\'s guard rotation, according to the official information.</string>
    <string name="desc_new2_baseball">The latest recommendations of the International Olympic Committee (IOC) do not give the World Baseball and Softball Confederation (WBSC) grounds to return Russians and Belarusians to international competitions.\n"
                    "\"The latest recommendations of the IOC executive committee of March 28, 2023 do not apply to baseball and softball, as they provide that teams of athletes with Russian or Belarusian passports cannot be considered for participation in international sports competitions,\" the WBSC press service quoted TASS as saying.\n
                    On March 28, 2023, the IOC recommended that international sports federations allow Russian athletes who do not support their sports in a neutral status to start. At the same time, Russian and Belarusian athletes should not be represented in team sports.</string>
    <string name="desc_new3_baseball">The All-Russian Forum of school sports clubs held in Kazan on Thursday presented an unusual information guide. If your child or you are studying at school, then soon you will probably have to get acquainted with the game of bast shoes in physical education. It is not clear yet whether it will be in a mandatory format or whether it will be possible to choose it among other sports. Russian Russian bast shoes, we decided to find out from the president of the Russian Bast Shoes Federation of Russia and coach Sergey Fokin why the officials remembered Russian fun and what condition the Russian bast shoes are in now.</string>
    <string name="paragraph1_new1_basketball">Larentzakis, 29, appeared in 41 EuroLeague games last season and averaged 6.4 points, 1.8 rebounds, 1.0 assists, and 4.8 PIR over 14 minutes per contest while shooting 49.2% from RANDOM NEWS DELETE ME beyond the arc.\n"
                    "He helped the Reds to reach the EuroLeague Final Four and secure the second spot, also winning the Greek championship and cup competition.</string>
    <string name="paragraph1_new2_basketball">On Friday, August 25, the Basketball World Cup started in three countries — Japan, Indonesia and the Philippines, which will last until September 10. In this material, "SE" gathered the main stars of the tournament. With an important clarification: the list should not contain more than one representative from each national team.</string>
    <string name="paragraph1_new3_basketball">The 2023 World Cup will be the second of three in a row scheduled to be held in Asia,
                    between the 2019 tournament held in China and the upcoming 2027 World Cup in Qatar. It will also be the second
                    in history with the participation of 32 teams and the first to be held by more than one country. The championship
                    will have three hosts at once — the Philippines, Japan and Indonesia will host the preliminary stages, and the main matches will be held in the Philippines.</string>
    <string name="paragraph1_new1_football">Larentzakis, 29, appeared in 41 EuroLeague games last season and averaged 6.4 points, 1.8 rebounds, 1.0 assists,
                    and 4.8 PIR over 14 minutes per contest while shooting 49.2% from RANDOM NEWS DELETE ME beyond the arc.\n
                    He helped the Reds to reach the EuroLeague Final Four and secure the second spot, also winning the Greek championship and cup competition.</string>
    <string name="paragraph1_new2_football">Larentzakis, 29, appeared in 41 EuroLeague games last season and averaged 6.4 points, 1.8 rebounds, 1.0 assists, and 4.8 PIR over
                    14 minutes per contest while shooting 49.2% from RANDOM NEWS DELETE ME beyond the arc.\n
                    He helped the Reds to reach the EuroLeague Final Four and secure the second spot, also winning the Greek championship and cup competition.</string>
    <string name="paragraph1_new3_football">Larentzakis, 29, appeared in 41 EuroLeague games last season and averaged 6.4 points, 1.8 rebounds, 1.0 assists, and 4.8 PIR over 14 minutes per contest while shooting 49.2% from RANDOM NEWS DELETE ME beyond the arc.\nHe helped the Reds to reach the EuroLeague Final Four and secure the second spot, also winning the Greek championship and cup competition.</string>
    <string name="paragraph1_new1_tennis">It is noteworthy that just a year ago at the US Open, a white streak in Khachanov\'s tennis career began. Karen finally managed to break through to the semifinals of the Grand Slam tournament, beating, in particular, Australian Nick Kyrgios — the offender Daniil Medvedev. And in the match for reaching the final, he gave a fight to Norwegian Kasper Ruud. As the Russian himself told, after that tournament he believed that he was able to achieve success at big tournaments. Thanks to this, he made a qualitative leap in results — he reached the semifinals at the Australian Open and the Indian Wells Masters and the quarterfinals of Roland Garros, returned to the top 10 of the ATP rankings after a long break.</string>
    <string name="paragraph1_new2_tennis">Larentzakis, 29, appeared in 41 EuroLeague games last season and averaged 6.4 points, 1.8 rebounds, 1.0 assists,
                    and 4.8 PIR over 14 minutes per contest while shooting 49.2% from RANDOM NEWS DELETE ME beyond the arc.\n
                    He helped the Reds to reach the EuroLeague Final Four and secure the second spot, also winning the Greek championship and cup competition.</string>
    <string name="paragraph1_new3_tennis">Larentzakis, 29, appeared in 41 EuroLeague games last season and averaged 6.4 points, 1.8 rebounds, 1.0 assists,
                    and 4.8 PIR over 14 minutes per contest while shooting 49.2% from RANDOM NEWS DELETE ME beyond the arc.\nHe helped the Reds to reach the EuroLeague Final Four and secure the second spot, also winning the Greek championship and cup competition.</string>
    <string name="paragraph1_new1_baseball">The number of subscribers in social networks of the native of Alabama is growing every day. The blue-eyed beauty, who now plays for the
                    Mississippi State College softball team, is a success with fans. And this is not surprising.</string>
</resources>