<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ChampionsFragment">

    <include
        android:id="@+id/include"
        layout="@layout/content_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="#1B1B1B"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/tv_nav_basketball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center"
            android:text="@string/_basketball"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_nav_football"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/_football"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_nav_tennis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/_tennis"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_nav_baseball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/_baseball"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="#1B1B1B"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_champions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="24dp"
        android:paddingTop="20dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        tools:listitem="@layout/item_champions" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ic_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>