<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".presentation.onBoarding.ThirstStartFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_the_sections_of_interest_and_follow_the_sports_news_in_real_time"
        app:layout_constraintVertical_bias="0.1"
        android:textColor="#1B1B1B"
        android:textSize="18sp"
        android:fontFamily="@font/inter_extrabold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_onboarding"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nav_football"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home_menu"
                    android:elevation="7dp">

                    <TextView
                        android:id="@+id/tv_nav_football"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/football"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_nav_football"
                        app:layout_constraintStart_toEndOf="@+id/ic_nav_football"
                        app:layout_constraintTop_toTopOf="@+id/ic_nav_football" />

                    <ImageView
                        android:id="@+id/ic_nav_football"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_football"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nav_tennis"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home_menu"
                    android:elevation="7dp">

                    <TextView
                        android:id="@+id/tv_nav_tennis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/tennis"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_nav_tennis"
                        app:layout_constraintStart_toEndOf="@+id/ic_nav_tennis"
                        app:layout_constraintTop_toTopOf="@+id/ic_nav_tennis" />

                    <ImageView
                        android:id="@+id/ic_nav_tennis"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_tennis"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nav_basketball"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home_menu"
                    android:elevation="7dp">

                    <TextView
                        android:id="@+id/tv_nav_basketball"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/basketball"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_nav_basketball"
                        app:layout_constraintStart_toEndOf="@+id/ic_nav_basketball"
                        app:layout_constraintTop_toTopOf="@+id/ic_nav_basketball" />

                    <ImageView
                        android:id="@+id/ic_nav_basketball"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_basketball"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nav_baseball"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"

                    android:layout_weight="1"
                    android:background="@drawable/bg_home_menu"
                    android:elevation="7dp">

                    <TextView
                        android:id="@+id/tv_nav_baseball"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/baseball"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_nav_baseball"
                        app:layout_constraintStart_toEndOf="@+id/ic_nav_baseball"
                        app:layout_constraintTop_toTopOf="@+id/ic_nav_baseball" />

                    <ImageView
                        android:id="@+id/ic_nav_baseball"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseball"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#1B1B1B"
        android:textSize="18sp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/you_can_also_see_the_top_best_players_of_2023_tennis_basketball_baseball_and_football"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_onboarding"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nav_champions"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_home_menu"
            android:elevation="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_nav_champions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="Champions"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/ic_nav_champions"
                app:layout_constraintStart_toEndOf="@+id/ic_nav_champions"
                app:layout_constraintTop_toTopOf="@+id/ic_nav_champions" />

            <ImageView
                android:id="@+id/ic_nav_champions"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_trophy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>